--- a/page/tabBar/minePages/classDetails/classDetails.wxss
+++ b/page/tabBar/minePages/classDetails/classDetails.wxss
@@ -34,6 +34,9 @@
   border-bottom: 1px solid #e5e5e5;
   padding: 25rpx 0;
 }
+.last_list{
+  border-bottom: none;
+}
 /* 人员 */
 .class_per_box{
   padding: 15rpx 0 0 0;
