--- a/page/tabBar/mine/mine.wxml
+++ b/page/tabBar/mine/mine.wxml
@@ -4,7 +4,7 @@
       <!-- header -->
       <view bindtap='photoTap' class='border_top bg_fff box_shadow'>
         <view class='display_flex com_width headers'>
-          <image src='/image/none_record.png'></image>
+          <image src='{{mineData.headPic}}'></image>
           <view>
             <view class='user_name'>
               <text>{{mineData.realName}}</text>
@@ -20,7 +20,8 @@
       
       </view>
       <!-- 实名认证 -->
-      <view hidden="{{mineData.isAuth == 1}}" class='bg_fff margin_top' bindtap='goAuthentication'>
+      <view hidden="{{mineData.isAuth == 1}}" 
+        class='bg_fff margin_top' bindtap='goAuthentication'>
       
         <view class='display_flex com_list certification'>
           <view class='icon_box'>
@@ -91,8 +92,18 @@
           <view class='icon_box'>
             <text class='fa color_6 com_icon color_blue fa-handshake-o'></text>
           </view>
-          <view class='com_list_right display_flex border_none'>
+          <view class='com_list_right display_flex'>
             <text>信息反馈</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+
+        <view bindtap='goWorkWanted' class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa com_icon color_blue fa-send'></text>
+          </view>
+          <view class='com_list_right display_flex border_none'>
+            <text>我的求职</text>
             <text class='fa com_right fa-chevron-right'></text>
           </view> 
         </view>
