--- a/page/tabBar/homePages/vipSeeAttendanceProject/vipSeeAttendanceProject.wxml
+++ b/page/tabBar/homePages/vipSeeAttendanceProject/vipSeeAttendanceProject.wxml
@@ -43,7 +43,7 @@
     <view wx:for="{{tabData.t}}" wx:item="item" wx:key="" class='com_tab_title'
       data-month="{{item.clockTime}}" bindtap='goCard'>
       <view class='tab_content overflow'>{{item.clockTime}}</view>
-      <view class='tab_content'>{{item.classNum}}</view>
+      <view class='tab_content'>{{item.CLASS_NUM}}</view>
       <view class='tab_content'>{{item.clockStatus}}</view>
       <view class='tab_content'>{{item.morning}}</view>
       <view class='tab_content'>{{item.night}}</view>
