--- a/page/tabBar/minePages/personData/personData.wxml
+++ b/page/tabBar/minePages/personData/personData.wxml
@@ -43,6 +43,14 @@
       </view>
     </view>
 
+    <view bindtap='go_pass' class='display_flex list_tab'>
+      <view>确认密码</view>
+      <view class='display_flex com_rigth_view'>
+        <text class='color_gray'>未设置</text>
+        <text class='fa add_gray fa-chevron-right'></text>
+      </view>
+    </view>
+
     <view class='display_flex list_tab'>
       <view>主要技能</view>
       <picker  bindchange="pickerSkill" value="{{workTypeName}}" 
@@ -51,6 +59,6 @@
           <view wx:else class="picker">请选择主要技能</view>
       </picker>
     </view>
-    
+
   </view>
 </view>
