--- a/page/tabBar/minePages/retPassword/retPassword.wxss
+++ b/page/tabBar/minePages/retPassword/retPassword.wxss
@@ -13,8 +13,8 @@
   line-height: 1;
 }
 .content input{
-  width: 70%;
-  text-indent: 30rpx;
+  width: 66%;
+  margin-left: 4%;
   padding: 25rpx 0;
   border-right: 1px solid #e5e5e5;
 }
@@ -23,9 +23,11 @@ button::after{
 }
 button{
   width: 30%;
-  padding: 0;
   margin: 0;
   line-height: 1;
   background: #fff;
   font-size: 30rpx;
+  height: 100%;
+  border-radius: 0;
+  padding: 30rpx 0;
 }
