--- a/page/tabBar/minePages/chagePassword/chagePassword.wxml
+++ b/page/tabBar/minePages/chagePassword/chagePassword.wxml
@@ -6,15 +6,15 @@
   <view class='content bg_fff'>
     <view class='setpass_list add_border display_flex'>
       <view class='setpass_list_title'>旧密码</view>
-      <input placeholder="请输入"></input>
+      <input bindinput='getOld' placeholder="请输入"></input>
     </view>
     <view class='setpass_list add_border display_flex'>
       <view class='setpass_list_title'>新密码</view>
-      <input placeholder="请输入"></input>
+      <input bindinput='getval1' placeholder="请输入"></input>
     </view>
     <view class='setpass_list display_flex'>
       <view class='setpass_list_title'>确认密码</view>
-      <input placeholder="请输入"></input>
+      <input bindinput='getval2' placeholder="请输入"></input>
     </view>
   </view>
   <view bindtap='go_retpass' class='com_width color_blue forget_pass'>
