--- a/page/tabBar/minePages/changePhoto/changePhoto.wxml
+++ b/page/tabBar/minePages/changePhoto/changePhoto.wxml
@@ -17,5 +17,24 @@
       </view>
     </view> 
   </view>
+
+  <view class='margin_top header bg_fff'>
+    <view class='com_title com_width'>上传工作照片</view>
+    <view class='photo_view padding_bottom display_flex com_width'>
+      <view bindtap='photoChooseImage' class='add_view'>
+        <block wx:if="{{imageP == ''}}">
+          <image class='icon' src='/image/add_icon.png'></image>
+          <view class='color_gray'>点击拍照上传照片</view>
+        </block>
+        <block wx:else>
+          <image class='photo' src='{{imageP}}'></image>
+        </block>
+        
+      </view>
+      <view class='photo_msg'>
+        <view>注：采集人像供考勤机智能识别，为了你的正常考勤，请拍摄自己的头像上传。</view>
+      </view>
+    </view> 
+  </view>
   <view bindtap='upodateFace' class='footer bg_blue'>确认修改</view>
 </view>
