--- a/page/tabBar/minePages/retPassword/retPassword.wxml
+++ b/page/tabBar/minePages/retPassword/retPassword.wxml
@@ -1,12 +1,12 @@
 <view class='box'>
   <view class='header'>
     <view class='com_width phone'>请验证手机号</view>
-    <view class='com_width'>请输入18801****297收到的短信验证码</view>
+    <view class='com_width'>请输入{{userPhone}}收到的短信验证码</view>
   </view>
 
   <view class='content bg_fff display_flex'>
-    <input placeholder='输入验证码'></input>
-    <button class='color_blue'>获取验证码</button>
+    <input bindinput='get_val' type='number' placeholder='输入验证码'></input>
+    <button bindtap='getCode' disabled='{{disabled}}' class='color_blue'>{{time}}</button>
   </view>
   <view bindtap='next' class='com_footer_btn bg_blue'>
     下一步
