--- a/page/tabBar/minePages/setPassword/setPassword.wxml
+++ b/page/tabBar/minePages/setPassword/setPassword.wxml
@@ -1,16 +1,16 @@
 <view class='box'>
   <view class='header color_gray'>
-    <view class='com_width color_gray'>为了保证你正常使用功能，请设置确认密码</view>
+    <view class='com_width color_gray'>{{init_font}}</view>
   </view>
 
   <view class='content bg_fff'>
     <view class='setpass_list add_border display_flex'>
       <view class='setpass_list_title'>密码</view>
-      <input placeholder="请输入"></input>
+      <input bindinput='getval1' placeholder="请输入"></input>
     </view>
     <view class='setpass_list display_flex'>
       <view class='setpass_list_title'>再次输入</view>
-      <input placeholder="请输入"></input>
+      <input bindinput='getval2' placeholder="请输入"></input>
     </view>
   </view>
   <view bindtap='next' class='com_footer_btn bg_blue'>
