--- a/page/tabBar/minePages/setPassword/setPassword.wxml
+++ b/page/tabBar/minePages/setPassword/setPassword.wxml
@@ -13,7 +13,13 @@
       <input bindinput='getval2' placeholder="请输入"></input>
     </view>
   </view>
-  <view bindtap='next' class='com_footer_btn bg_blue'>
+  
+  <!-- 找回密码确认 -->
+  <view wx:if="{{isRet}}" bindtap='ret_next' class='com_footer_btn bg_blue'>
+    确认
+  </view>
+  <!-- 设置密码确认 -->
+  <view wx:else bindtap='next' class='com_footer_btn bg_blue'>
     确认
   </view>
 </view>
