--- a/page/tabBar/homePages/perWageDetails/perWageDetails.wxml
+++ b/page/tabBar/homePages/perWageDetails/perWageDetails.wxml
@@ -31,12 +31,12 @@
     </view>
   </view>
 
-  <view class='phone_title'>手机验证</view>
+  <view class='phone_title'>确认密码</view>
   <view class='code_box'>
-    <input bindinput='get_val' type='number' placeholder='请输入验证码'></input>
-    <button class='get_code' disabled='{{disabled}}' bindtap='getCode'>
+    <input bindinput='get_val' type='number' placeholder='请输入确认密码'></input>
+    <!-- <button class='get_code' disabled='{{disabled}}' bindtap='getCode'>
       {{time}}
-    </button>
+    </button> -->
   </view>
 
   <view bindtap='confirmBtn' class='bg_blue com_width btn'>{{btnFont}}</view>
