--- a/page/tabBar/homePages/perWageDetails/perWageDetails.wxss
+++ b/page/tabBar/homePages/perWageDetails/perWageDetails.wxss
@@ -36,10 +36,10 @@
   background: #fff;
 }
 .code_box input{
-  width: 70%;
+  width: 95%;
   height: 100%;
   margin-left: 30rpx;
-  border-right: 1rpx solid #d9d9d9;
+  /* border-right: 1rpx solid #d9d9d9; */
 }
 button::after{
   border:none;
