--- a/page/tabBar/homePages/stayVipAttendanceDetails/stayVipAttendanceDetails.wxml
+++ b/page/tabBar/homePages/stayVipAttendanceDetails/stayVipAttendanceDetails.wxml
@@ -76,16 +76,20 @@
   <view bindtap='confirmTap' class='com_width one_yes'>确定</view>
 </view>
 
+<template-toast
+  wx:if="{{!blockIsShow}}"
+  bind:fgetVal="fgetVal"
+  bind:fno_tap="fno_tap"
+  bind:fconfirmTap="fconfirmTap">
+</template-toast>
+
  <!-- 浮层 -->
-<view hidden='{{blockIsShow}}' class='box_block'>
+<!-- <view hidden='{{blockIsShow}}' class='box_block'>
   <view class='bg_fff block_content'>
-    <view class='block_title'>获取验证码</view>
+    <view class='block_title'>请确认</view>
 
     <view class='com_width block_code display_flex'>
-      <input bindinput='get_val' placeholder='输入验证码' type='number'></input>
-      <button bindtap='getCode' disabled='{{disabled}}' class='get_code'>
-        {{time}}
-      </button>
+      <input bindinput='get_val' placeholder='输入确认密码' type='number'></input>
     </view>
 
     <view class='btn_box'>
@@ -93,4 +97,4 @@
       <view bindtap='confirmBtn' class='yes'>确认</view>
     </view>
   </view>
-</view>
+</view> -->
