--- a/page/tabBar/minePages/setWorkWanted/setWorkWanted.wxml
+++ b/page/tabBar/minePages/setWorkWanted/setWorkWanted.wxml
@@ -2,11 +2,11 @@
   <view class='border_top form_box bg_fff'>
     <view class='form_list display_flex'>
       <view>姓名</view>
-      <view class='margin_right'>张三</view>
+      <input bindinput='getName' placeholder='请输入姓名' class='margin_right'></input>
     </view>
     <view class='form_list display_flex'>
       <view>手机号码</view>
-      <view class='margin_right'>18801287297</view>
+      <input bindinput='getPhone' placeholder='请输入手机号' class='margin_right'></input>
     </view>
     <view class='form_list display_flex'>
       <view>工种</view>
@@ -47,9 +47,10 @@
     <view class='form_list last_list display_flex'>
       <view>求职说明</view>
     </view>
-    <textarea class='com_width' placeholder='输入求职说明'>
-      <text class='textarea_text'>10/50</text>
+    <textarea bindinput='getVal' class='com_width' value="{{content}}" 
+      placeholder='输入求职说明' maxlength="50" bindinput='getVal'>
+      <text class='textarea_text'>{{font_num}}/50</text>
     </textarea>
   </view>
-  <view class='bg_blue com_footer_btn'>确认发布</view>
+  <view bindtap='next' class='bg_blue com_footer_btn'>确认发布</view>
 </view>
