--- a/page/tabBar/minePages/workWanted/workWanted.wxml
+++ b/page/tabBar/minePages/workWanted/workWanted.wxml
@@ -1,22 +1,14 @@
 <view class='box'>
-  <view bindtap='go_changeWorkWanted' class='bg_fff'>
+  <view bindtap='go_changeWorkWanted' class='bg_fff'
+    wx:for="{{workList.t}}" wx:item="" wx:key=""
+    data-id='{{item.id}}' data-idx="{{idx}}" wx:for-index="idx">
     <view class='list_box com_width'>
-      <view class='list'>工种：混领土工</view>
-      <view class='list'>求职地区：北京通州</view>
-      <view class='list'>截止时间：2019年5月1日</view>
-      <view class='list'>阅读公司数量：10</view>
-      <view wx:if="{{1==1}}" class='btn bg_green'>发布中</view>
-      <view wx:else class='btn bg_gray'>已失效</view>
-    </view>
-  </view>
-  <view class='bg_fff'>
-    <view class='list_box com_width'>
-      <view class='list'>工种：瓦工</view>
-      <view class='list'>求职地区：北京海淀</view>
-      <view class='list'>截止时间：2019年4月30日</view>
-      <view class='list'>阅读公司数量：20</view>
-      <view wx:if="{{1==2}}" class='btn bg_green'>发布中</view>
-      <view wx:else class='btn bg_gray'>已失效</view>
+      <view class='list'>工种：{{item.workType}}</view>
+      <view class='list'>求职地区：{{item.address}}</view>
+      <view class='list'>截止时间：{{item.expiryDate}}</view>
+      <view class='list'>阅读公司数量：{{item.readNum}}</view>
+      <view wx:if="{{item.status == '发布中'}}" class='btn bg_green'>{{item.status}}</view>
+      <view wx:else class='btn bg_gray'>{{item.status}}</view>
     </view>
   </view>
   <view bindtap='go_setWork' class='footer display_flex bg_blue'>
