修改密码不可见

--- a/components/toast/toast.wxml
+++ b/components/toast/toast.wxml
@@ -4,7 +4,7 @@
     <view class='block_title'>请确认</view>
 
     <view class='com_width block_code display_flex'>
-      <input bindinput='_getVal' placeholder='输入确认密码' type='number'></input>
+      <input password bindinput='_getVal' placeholder='输入确认密码' type='number'></input>
       <!-- <button disabled='{{disabled}}' bindtap='getCode' class='get_code'>
         {{time}}
       </button> -->
