--- a/page/tabBar/minePages/setPassword/setPassword.wxml
+++ b/page/tabBar/minePages/setPassword/setPassword.wxml
@@ -6,11 +6,11 @@
   <view class='content bg_fff'>
     <view class='setpass_list add_border display_flex'>
       <view class='setpass_list_title'>密码</view>
-      <input bindinput='getval1' placeholder="请输入"></input>
+      <input password bindinput='getval1' placeholder="请输入"></input>
     </view>
     <view class='setpass_list display_flex'>
       <view class='setpass_list_title'>再次输入</view>
-      <input bindinput='getval2' placeholder="请输入"></input>
+      <input password bindinput='getval2' placeholder="请输入"></input>
     </view>
   </view>
   
